--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -17,5 +17,5 @@ zh-CN:
     form:
       add_social_relation: 添加社会关系
       fieldset:
-        patient: 患儿基本信息
-        apply: 申请
+        patient: 患儿信息
+        apply: 申请情况
